# obs-gphoto

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.rst
cmake/modules/: FindGphoto2.cmake  Findudev.cmake  LibFindMacros.cmake
src/: gphoto-preview.c  gphoto-preview.h  gphoto-udev.c  gphoto-udev.h  gphoto-utils.c  gphoto-utils.h  live-preview.c  live-preview.h  obs-gphoto.c  timelapse.c  timelapse.h
